# agentic-shopping-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BRANDS.md  CLIENT_ONBOARDING.md  DEMO.md  DEPLOY.md  Dockerfile  Makefile  PLAN.md  PRODUCTION_PLAN.md  PROJECT_AUDIT.md  README.md  RECREATE_CHECKLIST.md  SUPABASE_SETUP.md  TESTING.md  alembic.ini  config.yaml  fly.toml  fly_to_cloudrun_migration.md  pyproject.toml  requirements.txt  spec.md
alembic/: env.py
api/: README.md  auth.py  deps.py  logging_config.py  main.py  rate_limit.py  schemas.py  session.py
app/: streamlit_chat.py
brands/: berrylush.yaml  fashor.yaml  flipkart.yaml  globalrepublic.yaml  hm.yaml  libas.yaml  myntra.yaml  powerlook.yaml  sample_in.yaml  snitch.yaml  unified.yaml  virgio.yaml
data/: router_dataset.jsonl  router_dataset_test.jsonl  router_dataset_train.jsonl  router_dataset_v2.jsonl  router_dataset_v2_test.jsonl  router_dataset_v2_train.jsonl  router_dataset_v2_val.jsonl  router_dataset_v3.jsonl  router_dataset_v3_1_test.jsonl  router_dataset_v3_1_train.jsonl  router_dataset_v3_1_val.jsonl  router_dataset_v3_test.jsonl  router_dataset_v3_train.jsonl  router_dataset_v3_val.jsonl  router_dataset_val.jsonl  router_ood10_event_verb.jsonl  router_ood30_test.jsonl  router_ood_test.jsonl  router_training_v2_contrastive.jsonl  router_training_v3_contrastive_v3_1.jsonl
deploy/: service.yaml
docs/: ALLOW_LIST.md
eval/: category_normalization.py  cross_store_retrieval.py  f2_calibration.py  outfit_coherence.py  price_match_precision.py  run.py  twotower_compare.py
frontend/: .env.local.example  SETUP.md  middleware.ts  next.config.ts  (+5 more)
(+323 files in other folders)
