[project]
name = "agentic-shopping-assistant"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "colour-science>=0.4.4",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "ollama>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.8.0",
    "websockets>=12.0",
    "streamlit>=1.38.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "groq>=1.0.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pyjwt[crypto]>=2.8.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "google-cloud-storage>=2.14.0",
    "pillow-heif>=1.4.0",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_ollama: marks tests that require a running Ollama instance (deselect with -m 'not requires_ollama')",
    "requires_index: marks tests that require pre-built retrieval index files (deselect with -m 'not requires_index')",
    "requires_clip: marks tests that load the real CLIP model and require network/model download (deselect with -m 'not requires_clip')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
